care/force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Adding Account Plan object sitting on the accounts to lead the conversation on strategizing how to win the account for Care@Work. It serves as the roadmap of engagement with the prospect and client. It also serves as the repository of critical information related to the account. 

In addition, it streamlines ad hoc summaries/briefings that AE/AMs create for the Sr. management. 


It will be a one to many relationships between Account and Account Plan object.</description>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>