care/force-app/main/default/objects/Account_Plan__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(Company_Name__r.BillingStreet==null,&apos;&apos;,Company_Name__r.BillingStreet+&apos;,&apos;)+
IF(Company_Name__r.BillingCity==null,&apos;&apos;,Company_Name__r.BillingCity+&apos;,&apos;)+
IF(Company_Name__r.BillingState==null,&apos;&apos;,Company_Name__r.BillingState+&apos;,&apos;)+
IF(Company_Name__r.BillingCountry==null,&apos;&apos;,Company_Name__r.BillingCountry+&apos;,&apos;)+
IF(Company_Name__r.BillingPostalCode==null,&apos;&apos;,Company_Name__r.BillingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>