care/force-app/main/default/objects/Account_Plan__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <formula>&apos;$&apos;&amp;TEXT(Company_Name__r.AnnualRevenue )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Revenue</label>
    <type>Text</type>
</CustomField>