care/force-app/main/default/objects/Account_Plan__c/fields/Business_Priorities_a__c.field-meta.xml
<CustomField>
    <fullName>Business_Priorities_a__c</fullName>
    <description>Business Priorities</description>
    <inlineHelpText>Business Priorities</inlineHelpText>
    <label>Business Priorities(a)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>