care/force-app/main/default/objects/Account_Plan__c/fields/Business_Priorities_b__c.field-meta.xml
<CustomField>
    <fullName>Business_Priorities_b__c</fullName>
    <label>Business Priorities(b)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>