care/force-app/main/default/objects/Account_Plan__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <description>Channel Partner</description>
    <inlineHelpText>Enter channel partners if applicable.</inlineHelpText>
    <label>Channel Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>