care/force-app/main/default/objects/Account_Plan__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments</description>
    <inlineHelpText>Enter additional comments regarding the account.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>