care/force-app/main/default/objects/Account_Plan__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company Name</description>
    <inlineHelpText>Company Name</inlineHelpText>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>