care/force-app/main/default/objects/Account_Plan__c/fields/Cross_Functional_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Cross_Functional_Opportunities__c</fullName>
    <description>Cross-Functional Opportunities</description>
    <inlineHelpText>Select cross-functional Opportunities</inlineHelpText>
    <label>Cross-Functional Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Homepay</fullName>
            </value>
            <value>
                <fullName>Homestart</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>