care/force-app/main/default/objects/Account_Plan__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <formula>TEXT( Company_Name__r.NumberOfEmployees )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees</label>
    <type>Text</type>
</CustomField>