care/force-app/main/default/objects/Account_Plan__c/fields/Key_solutions_a__c.field-meta.xml
<CustomField>
    <fullName>Key_solutions_a__c</fullName>
    <description>Key solutions</description>
    <inlineHelpText>Key solutions</inlineHelpText>
    <label>Key solutions a</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>