care/force-app/main/default/objects/Account_Plan__c/fields/Key_solutions_b__c.field-meta.xml
<CustomField>
    <fullName>Key_solutions_b__c</fullName>
    <label>Key solutions b</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>