care/force-app/main/default/objects/Account_Plan__c/fields/Key_strategic_milestones__c.field-meta.xml
<CustomField>
    <fullName>Key_strategic_milestones__c</fullName>
    <description>Key strategic milestones</description>
    <inlineHelpText>Key strategic milestones</inlineHelpText>
    <label>Key strategic milestones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>