care/force-app/main/default/objects/Account_Plan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Opportunity corresponding to Account Plan</description>
    <inlineHelpText>Opportunity corresponding to Account Plan</inlineHelpText>
    <label>Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>