care/force-app/main/default/objects/Account_Plan__c/fields/Opportunity_Seleted__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Seleted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Seleted</description>
    <inlineHelpText>Please choose an opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>