care/force-app/main/default/objects/Account_Plan__c/fields/Plan_to_realize_the_solution_a__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_realize_the_solution_a__c</fullName>
    <description>Key solutions</description>
    <inlineHelpText>Plan to realize the solution(a)</inlineHelpText>
    <label>Plan to realize the solution(a)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>