care/force-app/main/default/objects/Account_Plan__c/fields/Plan_to_realize_the_solution_c__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_realize_the_solution_c__c</fullName>
    <description>Plan to realize the solution(c)</description>
    <inlineHelpText>Plan to realize the solution(c)</inlineHelpText>
    <label>Plan to realize the solution(c)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>