care/force-app/main/default/objects/Account_Plan__c/fields/Plan_to_realize_the_solution_d__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_realize_the_solution_d__c</fullName>
    <description>Plan to realize the solution(d)</description>
    <inlineHelpText>Plan to realize the solution(d)</inlineHelpText>
    <label>Plan to realize the solution(d)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>