care/force-app/main/default/objects/Account_Plan__c/recordTypes/WPS_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>WPS_Account_Plan</fullName>
    <active>true</active>
    <description>This is used by  WPS team</description>
    <label>WPS Account Plan</label>
</RecordType>